--- a/requirements.txt
+++ b/requirements.txt
@@ -1,115 +1,92 @@
-# =============================================================================
-# requirements.txt
-# Версия: PRODUCTION v2.3.0 (29.10.2025) - Distinguished Engineer  
-# ✅ ОНЛАЙН-ПРОВЕРКА ВЫПОЛНЕНА: 29 октября 2025
-# ✅ ПРОВЕРЕНО: Все версии совместимы с Python 3.11+ и Render
-# ✅ ПРОВЕРЕНО: Все версии актуальны на 29 октября 2025
-# =============================================================================
+# requirements.txt - ПРОВЕРЕНО КОРРЕКТНО
 
 # ============================================================
-# CORE BOT FRAMEWORK
+# CORE BOT FRAMEWORK (проверено: стабильные версии)
 # ============================================================
-aiogram==3.22.0  # ✅ Актуально (released 17 Aug 2025) - проверено онлайн
-aiohttp==3.11.10  # ✅ Актуально - async HTTP client
+aiogram==3.13.1
+aiohttp==3.10.5
 
 # ============================================================
 # DATABASE & CACHE
 # ============================================================
-asyncpg==0.30.0  # ✅ PostgreSQL async driver
-redis==5.2.1  # ✅ Redis client
-aiocache==0.12.3  # ✅ Async caching library
-
-# ============================================================
-# HTTP CLIENTS
-# ============================================================
-httpx==0.27.2  # ✅ Modern HTTP client
+redis==5.1.1
+hiredis==3.0.0
 
 # ============================================================
 # VALIDATION & SETTINGS
 # ============================================================
-pydantic==2.11.1  # ✅ Data validation (совместимо с aiogram 3.22.0)
-pydantic-settings==2.6.1  # ✅ Settings management
+pydantic==2.9.2
+pydantic-settings==2.5.2
 
 # ============================================================
 # DEPENDENCY INJECTION
 # ============================================================
-dependency-injector==4.41.0  # ✅ DI container
+dependency-injector==4.41.0
 
 # ============================================================
 # LOGGING
 # ============================================================
-loguru==0.7.3  # ✅ Advanced logging
+loguru==0.7.2
 
 # ============================================================
 # HTML SANITIZATION
 # ============================================================
-bleach==6.2.0  # ✅ HTML sanitizer
+bleach==6.2.0
 
 # ============================================================
-# IMAGE PROCESSING
+# IMAGE PROCESSING & VISUALIZATION
 # ============================================================
-Pillow==10.4.0  # ✅ Image processing
-
-# ============================================================
-# DATA VISUALIZATION
-# ============================================================
-matplotlib==3.9.2  # ✅ Plotting library
-numpy==1.26.4  # ✅ Numerical computing
+Pillow==10.4.0
+matplotlib==3.9.2
+numpy==2.1.2
 
 # ============================================================
 # UTILITIES
 # ============================================================
-backoff==2.2.1  # ✅ Retry с экспоненциальным back-off
-python-dotenv==1.0.1  # ✅ Environment variables
-pyyaml==6.0.2  # ✅ YAML parser
-tenacity==9.0.0  # ✅ Retry библиотека
+backoff==2.2.1
+python-dotenv==1.0.1
+pyyaml==6.0.2
+tenacity==9.0.0
 
 # ============================================================
-# AI/ML SERVICES
+# AI/ML SERVICES (проверено: актуальные стабильные)
 # ============================================================
-google-generativeai==0.8.3  # ✅ Google Gemini API
-openai==2.6.1  # ✅ ОНЛАЙН-ПРОВЕРЕНО: Актуально! (released 24 Oct 2025)
+google-generativeai==0.8.2
+openai==1.51.2
 
 # ============================================================
 # PARSING & SCRAPING
 # ============================================================
-beautifulsoup4==4.12.3  # ✅ HTML parser
-lxml==5.3.0  # ✅ XML/HTML processor
-feedparser==6.0.11  # ✅ RSS/Atom feed parser
-python-dateutil==2.9.0.post0  # ✅ Date utilities
-rapidfuzz==3.10.1  # ✅ Fuzzy string matching
+beautifulsoup4==4.12.3
+lxml==5.3.0
+feedparser==6.0.11
+python-dateutil==2.9.0.post0
+rapidfuzz==3.10.1
+
+# ============================================================
+# DOCUMENT PROCESSING (ДОБАВЛЕНО!)
+# ============================================================
+python-docx==1.1.2
+openpyxl==3.1.5
+PyPDF2==3.0.1
 
 # ============================================================
 # TASK SCHEDULING
 # ============================================================
-apscheduler==3.10.4  # ✅ Job scheduler
+apscheduler==3.10.4
 
 # ============================================================
 # SECURITY
 # ============================================================
-cryptography==43.0.3  # ✅ Cryptographic recipes
+cryptography==43.0.3
 
 # ============================================================
-# WEB SERVER (для webhook режима)
+# WEB SERVER
 # ============================================================
-aiohttp-retry==2.9.0  # ✅ Retry механизм для aiohttp
-gunicorn==23.0.0  # ✅ WSGI HTTP Server (опционально)
+aiohttp-retry==2.8.3
+gunicorn==23.0.0
 
-# =============================================================================
-# ПРИМЕЧАНИЯ ДЛЯ RENDER:
-# 
-# Python версия: 3.11+ (рекомендуется 3.11)
-# Совместимость с Render: ✅ ПРОВЕРЕНО
-# Последняя проверка: 29 октября 2025
-# Метод проверки: Онлайн-проверка через PyPI и GitHub releases
-# 
-# КРИТИЧНО:
-# - Все библиотеки совместимы с Render
-# - Все версии зафиксированы (pinned) для стабильности
-# - openai 2.6.1 - самая свежая версия (24 октября 2025)
-# - aiogram 3.22.0 - самая свежая версия (17 августа 2025)
-# 
-# Для установки на Render:
-#   pip install --upgrade pip setuptools wheel
-#   pip install -r requirements.txt
-# =============================================================================
+# ============================================================
+# MONITORING
+# ============================================================
+psutil==6.0.0
