feat: add Procfile for process management

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-# requirements.txt - ПРОВЕРЕНО КОРРЕКТНО
+# requirements.txt
+# Обновлено: 30.10.2025
+# Python: 3.11.x
 
 # ============================================================
-# CORE BOT FRAMEWORK (проверено: стабильные версии)
+# CORE BOT FRAMEWORK
 # ============================================================
 aiogram==3.13.1
-aiohttp==3.10.5
+aiohttp==3.10.10
+aiohttp-retry==2.8.3
 
 # ============================================================
 # DATABASE & CACHE
@@ -21,7 +24,7 @@ pydantic-settings==2.5.2
 # ============================================================
 # DEPENDENCY INJECTION
 # ============================================================
-dependency-injector==4.41.0
+dependency-injector==4.42.0
 
 # ============================================================
 # LOGGING
@@ -36,7 +39,7 @@ bleach==6.2.0
 # ============================================================
 # IMAGE PROCESSING & VISUALIZATION
 # ============================================================
-Pillow==10.4.0
+Pillow==11.0.0
 matplotlib==3.9.2
 numpy==2.1.2
 
@@ -49,10 +52,10 @@ pyyaml==6.0.2
 tenacity==9.0.0
 
 # ============================================================
-# AI/ML SERVICES (проверено: актуальные стабильные)
+# AI/ML SERVICES
 # ============================================================
-google-generativeai==0.8.2
-openai==1.51.2
+google-generativeai==0.8.3
+openai==1.52.2
 
 # ============================================================
 # PARSING & SCRAPING
@@ -64,7 +67,7 @@ python-dateutil==2.9.0.post0
 rapidfuzz==3.10.1
 
 # ============================================================
-# DOCUMENT PROCESSING (ДОБАВЛЕНО!)
+# DOCUMENT PROCESSING
 # ============================================================
 python-docx==1.1.2
 openpyxl==3.1.5
@@ -83,10 +86,9 @@ cryptography==43.0.3
 # ============================================================
 # WEB SERVER
 # ============================================================
-aiohttp-retry==2.8.3
 gunicorn==23.0.0
 
 # ============================================================
 # MONITORING
 # ============================================================
-psutil==6.0.0
+psutil==6.1.0
