--- a/render.yaml
+++ b/render.yaml
@@ -1,78 +1,30 @@
-# render.yaml - ИСПРАВЛЕНО ДЛЯ ПРЕДОТВРАЩЕНИЯ КОНФЛИКТОВ
-
+# render.yaml
 services:
-  # ==================== TELEGRAM BOT WORKER ====================
-  - type: worker
-    name: telegram-crypto-bot-worker
+  - type: web
+    name: mining-ai-bot
     runtime: python
-    region: frankfurt
-    plan: free
-    
-    # Build с принудительной очисткой
-    buildCommand: |
-      pip install --upgrade pip setuptools wheel
-      pip install -r requirements.txt
-    
-    # Start с pre-hook для очистки
-    startCommand: |
-      python -c "import sys; print('Starting bot...', flush=True)" && \
-      python -m bot.main
-    
-    # КРИТИЧНО: Только 1 инстанс!
-    numInstances: 1
-    
-    # ДОБАВЛЕНО: Настройки для предотвращения множественных запусков
-    healthCheckPath: null  # Отключаем health check для worker
-    
-    # ДОБАВЛЕНО: Restart policy
-    autoDeploy: true
-    
+    plan: starter
+    region: oregon
+    branch: main
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    startCommand: python -m bot.main
     envVars:
-      # =================================================================
-      # ОБЯЗАТЕЛЬНЫЕ
-      # =================================================================
+      - key: PYTHON_VERSION
+        value: 3.11.0
       - key: BOT_TOKEN
         sync: false
-      
       - key: REDIS_URL
         sync: false
-      
-      - key: GEMINI_API_KEY
-        sync: false
-      
-      - key: ADMIN_USER_IDS
-        value: "123456789"
-      
-      # =================================================================
-      # ОПЦИОНАЛЬНЫЕ API
-      # =================================================================
       - key: OPENAI_API_KEY
         sync: false
-      
-      - key: ADMIN_CHAT_ID
+      - key: GEMINI_API_KEY
         sync: false
-      
-      - key: NEWS_CHAT_ID
-        sync: false
-      
-      # =================================================================
-      # СИСТЕМНЫЕ (НЕ ИЗМЕНЯТЬ!)
-      # =================================================================
-      - key: PYTHON_VERSION
-        value: "3.11"
-      
-      - key: IS_WEB_PROCESS
-        value: "false"
-      
-      - key: PORT
-        value: "10000"
-      
       - key: LOG_LEVEL
-        value: "INFO"
-      
-      # ДОБАВЛЕНО: Таймауты для предотвращения зависания
-      - key: GRACEFUL_SHUTDOWN_TIMEOUT
-        value: "10"
-      
-      - key: POLLING_TIMEOUT
-        value: "10"
+        value: INFO
+      - key: PORT
+        value: 10000
+    scaling:
+      minInstances: 1
+      maxInstances: 1
+    healthCheckPath: /
+    autoDeploy: true
