--- a/render.yaml
+++ b/render.yaml
@@ -1,30 +1,37 @@
-# render.yaml
 services:
+  # Основной Telegram бот
   - type: web
-    name: mining-ai-bot
+    name: cryptobot
     runtime: python
-    plan: starter
-    region: oregon
+    region: frankfurt  # или oregon для США
+    plan: starter  # Бесплатный план
     branch: main
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: python -m bot.main
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.0
+        value: 3.11
       - key: BOT_TOKEN
+        sync: false  # Нужно будет добавить вручную
+      - key: ADMIN_IDS
         sync: false
       - key: REDIS_URL
+        fromService:
+          type: redis
+          name: cryptobot-redis
+          property: connectionString
+      - key: DATABASE_URL
         sync: false
-      - key: OPENAI_API_KEY
-        sync: false
-      - key: GEMINI_API_KEY
-        sync: false
-      - key: LOG_LEVEL
-        value: INFO
-      - key: PORT
-        value: 10000
-    scaling:
-      minInstances: 1
-      maxInstances: 1
-    healthCheckPath: /
-    autoDeploy: true
+      - key: ANTHROPIC_API_KEY
+        sync: false  # Для AI функций
+      - key: ENVIRONMENT
+        value: production
+    healthCheckPath: /health
+    
+  # Redis для кеширования и состояний
+  - type: redis
+    name: cryptobot-redis
+    region: frankfurt
+    plan: starter  # Бесплатный план (25MB)
+    maxmemoryPolicy: allkeys-lru
+    ipAllowList: []  # Пустой = доступ только из Render
