--- a/render.yaml
+++ b/render.yaml
@@ -21,7 +21,7 @@ services:
           property: connectionString
       - key: DATABASE_URL
         sync: false
-      - key: ANTHROPIC_API_KEY
+      - key: OPENAI_API_KEY
         sync: false
       - key: ENVIRONMENT
         value: production
