--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# requirements.txt
 aiogram==3.13.1
 aiohttp==3.10.10
 aiohttp-retry==2.8.3
@@ -29,3 +30,4 @@ apscheduler==3.10.4
 cryptography==43.0.3
 gunicorn==23.0.0
 psutil==6.1.0
+async-lru==2.0.4
